--- a/index.html
+++ b/index.html
@@ -48,9 +48,15 @@
             <a href="https://www.avidoamor.com.br/" target="_blank">
               <img src="img/Avido_Amor_icone_semfundo_pto.png" alt="Avido Amor">
             </a>
+            <a href="https://matheuzin30.github.io/Catholic-Quizz/" target="_blank">
+              <i class="bi bi-controller"></i>
+
+            </a>
             <p>A maioria dos projetos em que realizei foram feitos em C#, no qual foi minha primeira linguagem em que mexi.<br><br>
-              Além disso participei de um projeto de um movimento da minha igreja porém o site infelizmente não está mais funcionando corretamente.
+              Além disso participei de um projeto de um movimento da minha igreja porém o site infelizmente não está mais funcionando corretamente.<br><br>
+              Também relizei a criação de um Quizz usando HTML, CSS e Javascript , onde foi um projeto simples, mas que me ajudou a entender melhor como funciona a lógica de programção.
             </p>
+            
           </div>
         <div id="contact" class="section contact">
            <h2>Contatos</h2>
