feat: style para celular
ajustado para celular

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
               <img src="img/Avido_Amor_icone_semfundo_pto.png" alt="Avido Amor">
             </a>
             <a href="https://matheuzin30.github.io/Catholic-Quizz/" target="_blank">
-              <i class="bi bi-controller"></i>
+              <i class="controle bi-controller"></i>
 
             </a>
             <p>A maioria dos projetos em que realizei foram feitos em C#, no qual foi minha primeira linguagem em que mexi.<br><br>
