--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <link rel="stylesheet" href="Style/style.css">
     <link rel="shortcut icon" href="img/notoriedade.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
@@ -19,7 +19,7 @@
                  <li><a href="#site">Criação do Site</a></li>
              </ul>
          </nav>
-         <a class="cta" href="#"><button>Contato</button></a>
+         <a class="cta" href="#contact"><button>Contato</button></a>
      </header>
         <div id="aboutme" class="section aboutme">
             <h2 class="forme">Sobre mim</h2>
@@ -46,7 +46,7 @@
           <div id="projects" class="section projects">
             <h2>Projetos</h2>
             <a href="https://www.avidoamor.com.br/" target="_blank">
-              <img src="img/Avido_Amor_icone_semfundo_pto.png" alt="Avido Amor">
+              <img src="img/avidoamor.png" alt="Avido Amor">
               <a href="https://matheuzin30.github.io/Catholic-Quizz/" target="_blank">
                 <i class="controle bi-controller"></i>
   
@@ -58,13 +58,51 @@
             </p>
             
           </div>
-        <div id="contact" class="section contact">
-           <h2>Contatos</h2>
-           <div>
-            <a href="https://www.instagram.com/matheuszin_05/"target="_blank"</a><i class="bi bi-instagram"></i>
-            <a href="https://www.linkedin.com/in/matheus-silva-241b8a276/" target="_blank"</a><i class="bi bi-linkedin"></i>    
-            <a href="https://github.com/Matheuzin30" target="_blank"</a><i class="bi bi-github"></i>
-           </div>
-        </div>
+          <div id="education" class="section education">
+            <h2>Formação Acadêmica e Habilidades</h2>
+            <div class="education-content">
+              <h3>Formação Acadêmica</h3>
+              <ul>
+                <li>
+                  <p>Cursando Análise e Desenvolvimento</p>
+                </li>
+                <li>Técnico em Mecatrônica</li>
+              <h3>Habilidades</h3>
+              <ul>
+                <li>
+                  <p>Programação em C# do básico ao avançado</p>
+                </li>
+                <li><p>Desenvolvimento Web básico</p>  </li>
+                <li>
+                  <p>Experiência com PHP e Delphi</p>
+                </li>
+                <li>
+                  <p>Familiaridade com Banco de Dados Oracle, Docker, Apache, Git e GitHub, TortoiseSvn</p>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div id="contact" class="section contact">
+            <h2>Contatos</h2>
+            <div class="contact-info">
+              <p>
+                <i class="bi bi-envelope"></i>
+                <a href="mailto:matleandrosilva@gmail.com">matleandrosilva@gmail.com</a>
+              </p>
+              <p>
+                <i class="bi bi-phone"></i>
+                <a href="tel:+5543999972497">+55 43 99997-2497</a>
+              </p>
+              <p>
+                <i class="bi bi-geo-alt"></i>
+                <address>Serra dos Parecis, 208, Jardim Bandeirantes, Londrina-PR</address>
+              </p>
+            </div>
+            <div>
+              <a href="https://www.instagram.com/matheuszin_05/" target="_blank"><i class="bi bi-instagram"></i></a>
+              <a href="https://www.linkedin.com/in/matheus-silva-241b8a276/" target="_blank"><i class="bi bi-linkedin"></i></a>
+              <a href="https://github.com/Matheuzin30" target="_blank"><i class="bi bi-github"></i></a>
+            </div>
+            
 </body>
 </html>
